2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* scripts/texi/versions.texi: bumped streams version

2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: do not build incomplete packages by default

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* openss7.refs: updates for release

2006-10-05  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/manual/news.texi: updates for release
	* doc/manual/todo.texi: updates for release

2006-10-03  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: updated release notes

2006-10-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: added strsock and striso package location
	* doc/manual/Makefile.am: added licenses
	* doc/manual/openss7.texi: added licenses

2006-10-01  Brian Bidulock  <bidulock@openss7.org>

	* am/release.am: distribute release files
	* am/libraries.am: distribute library version files
	* Makefile.am: distribute release and library version files

2006-09-30  Brian Bidulock  <bidulock@openss7.org>

	* m4/nsl.m4: corrected warning message
	* m4/sock.m4: corrected warning message
	* m4/xti.m4: corrected warning message (and variable)
	* m4/iso.m4: added striso locator macros

2006-09-29  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: move master directory checks earlier
	* configure.ac: add AC_LIBTOOL_DLOPEN
	* openss7.spec.in: better spec file handling

	* m4/inet.m4: better search handling an libtool library paths
	* m4/libraries.m4: better search handling an libtool library paths
	* m4/nsl.m4: better search handling an libtool library paths
	* m4/sctp.m4: better search handling an libtool library paths
	* m4/sock.m4: better search handling an libtool library paths