@@ -3,7 +3,7 @@
 # BEGINNING OF SEPARATE COPYRIGHT MATERIAL
 # =============================================================================
 # 
-# @(#) $RCSfile: openss7.m4,v $ $Name:  $($Revision: 0.9.2.37 $) $Date: 2006/09/25 08:56:35 $
+# @(#) $RCSfile: openss7.m4,v $ $Name:  $($Revision: 0.9.2.38 $) $Date: 2006/10/21 09:18:51 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -48,11 +48,14 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/09/25 08:56:35 $ by $Author: brian $
+# Last Modified $Date: 2006/10/21 09:18:51 $ by $Author: brian $
 #
 # -----------------------------------------------------------------------------
 #
 # $Log: openss7.m4,v $
+# Revision 0.9.2.38  2006/10/21 09:18:51  brian
+# - better config.site generation
+#
 # Revision 0.9.2.37  2006/09/25 08:56:35  brian
 # - corrections by inspection
 #
